--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "@storybook/addons": "^4.0.2",
     "@babel/core": "^7.1.2",
     "babel-loader": "^8.0.4"
+  },
+  "prettier": {
+    "parser": "typescript",
+    "trailingComma": "none",
+    "tabWidth": 4,
+    "semi": false
   }
 }
