--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "react-scripts": "2.1.1",
     "styled-components": "^4.0.3"
   },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@types/ramda": "^0.25.41",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.8.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,16 +30,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@storybook/addon-actions": "^4.0.2",
-    "@storybook/addon-links": "^4.0.2",
-    "@storybook/addons": "^4.0.2",
-    "@storybook/react": "^4.0.2",
-    "@types/ramda": "^0.25.41",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.8.0"
-  },
   "prettier": {
     "parser": "typescript",
     "trailingComma": "none",
