--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "styled-normalize": "^8.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
